--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 
 [dependencies]
 gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
+ndarray = "0.15.6"
+plotters = "0.3.5"
