--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.1.0"
 authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
 edition = "2021"
 
+build = "build.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
 ndarray = "0.15.6"
 plotters = "0.3.5"
+plotters-cairo = "0.4.0"
+
+[build-dependencies]
+glib-build-tools = "0.18.0"
