--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 [dependencies]
 ndarray = "0.15.6"
 rocket = {version = "=0.5.0-rc.3", features = ["json"]}
+rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
