--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ ndarray = "0.15.6"
 rocket = {version = "=0.5.0-rc.3", features = ["json"]}
 rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
 serde = "1.0.188"
+uuid = {version = "1.4.1", features = ["v4"]}
+zip = "0.6.6"
