--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "us-viewer"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
 edition = "2021"
 
@@ -8,8 +8,8 @@ edition = "2021"
 
 [dependencies]
 ndarray = "0.15.6"
+open = "5.0.0"
 rocket = {version = "=0.5.0-rc.3", features = ["json"]}
 rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
 serde = "1.0.188"
-uuid = {version = "1.4.1", features = ["v4"]}
 zip = "0.6.6"
