--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "us-viewer"
-version = "0.3.1"
+name = "sonoware-viewer"
+version = "0.4.0"
 authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
 edition = "2021"
 
@@ -12,4 +12,5 @@ open = "5.0.0"
 rocket = {version = "=0.5.0-rc.3", features = ["json"]}
 rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
 serde = "1.0.188"
+serde_json = "1.0.107"
 zip = "0.6.6"
