--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+iir_filters = "0.1.3"
 ndarray = "0.15.6"
 open = "5.0.0"
 regex = "1.10.2"
