--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+opt-level = 'z'
+lto = true
+
 [dependencies]
 iir_filters = "0.1.3"
 ndarray = "0.15.6"
-open = "5.0.0"
+open = "5.0.1"
 regex = "1.10.2"
 rocket = {version = "=0.5.0-rc.3", features = ["json"]}
 rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
