--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sonoware-viewer"
-version = "0.5.0-beta-2"
+version = "1.0.0-beta-4"
 authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
 edition = "2021"
 
@@ -15,8 +15,8 @@ iir_filters = "0.1.3"
 ndarray = "0.15.6"
 open = "5.0.1"
 regex = "1.10.2"
-rocket = {version = "=0.5.0-rc.3", features = ["json"]}
-rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
+rocket = {version = "=0.5.0", features = ["json"]}
+rocket_dyn_templates = {version = "0.1.0", features = ["tera"]}
 serde = "1.0.193"
 serde_json = "1.0.108"
 zip = "0.6.6"
