--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sonoware-viewer"
-version = "1.0.0-beta-4"
+version = "1.0.0-beta-6"
 authors = ["Forschungszentrum Ultraschall gGmbH <kontakt@fz-u.de>"]
 edition = "2021"
 
@@ -9,6 +9,9 @@ edition = "2021"
 [profile.release]
 opt-level = 'z'
 lto = true
+codegen-units = 1
+panic = "abort"
+strip = "symbols"
 
 [dependencies]
 iir_filters = "0.1.3"
