--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ rocket = {version = "=0.5.1", features = ["json"]}
 rocket_dyn_templates = {version = "0.2.0", features = ["tera"]}
 serde = "1.0.219"
 serde_json = "1.0.140"
-zip = "4.0.0"
+zip = "^5.0.0"
